force-app/main/default/objects/Lead/fields/Disqualification_reason__c.field-meta.xml
<CustomField>
    <fullName>Disqualification_reason__c</fullName>
    <label>Disqualification reason</label>
    <type>TextArea</type>
</CustomField>