force-app/main/default/objects/Lead/fields/In_which_country_will_the_investment_tak__c.field-meta.xml
<CustomField>
    <fullName>In_which_country_will_the_investment_tak__c</fullName>
    <label>In which country will the investment tak</label>
    <type>TextArea</type>
</CustomField>