force-app/main/default/objects/Lead/fields/Is_Interested__c.field-meta.xml
<CustomField>
    <fullName>Is_Interested__c</fullName>
    <inlineHelpText>Does the customer want to pursue the loan right now?</inlineHelpText>
    <label>Is_Interested?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>