force-app/main/default/objects/Lead/fields/isContacted__c.field-meta.xml
<CustomField>
    <fullName>isContacted__c</fullName>
    <defaultValue>false</defaultValue>
    <label>isContacted?</label>
    <type>Checkbox</type>
</CustomField>