force-app/main/default/objects/Lead/fields/Lead_Type__c.field-meta.xml
<CustomField>
    <fullName>Lead_Type__c</fullName>
    <formula>IF(ISPICKVAL( LeadSource , &apos;Web&apos;),&apos;Warm&apos;,&apos;Cold&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Lead Type</label>
    <type>Text</type>
</CustomField>