force-app/main/default/objects/Lead/fields/LLC_BI__Product__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Product__c</fullName>
    <description>The required picklist field is manually populated and specifies the Product. The options for this field are dependent on the Product Line and Product Type field.</description>
    <label>Product</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>LLC_BI__Product_Type__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>Construction</fullName>
                <default>true</default>
                <label>Construction</label>
            </value>
            <value>
                <fullName>Line of Credit</fullName>
            </value>
            <value>
                <fullName>Equipment</fullName>
            </value>
            <value>
                <fullName>Purchase</fullName>
            </value>
            <value>
                <fullName>HELOC</fullName>
            </value>
            <value>
                <fullName>Term Loan</fullName>
            </value>
            <value>
                <fullName>TLI</fullName>
            </value>
            <value>
                <fullName>TL</fullName>
            </value>
            <value>
                <fullName>RC</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>