force-app/main/default/objects/Lead/fields/Project_Title__c.field-meta.xml
<CustomField>
    <fullName>Project_Title__c</fullName>
    <description>This Field is created to record the Project Title</description>
    <label>Project Title</label>
    <length>50</length>
    <type>Text</type>
</CustomField>