force-app/main/default/objects/Lead/fields/Relationship__c.field-meta.xml
<CustomField>
    <fullName>Relationship__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Relationship</label>
    <lookupFilter>
        <active>true</active>
        <errorMessage>Check It</errorMessage>
        <filterItems>
            <field>Account.Type</field>
            <operation>equals</operation>
            <value>Legal/Law Firm</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Leads (Relationship)</relationshipLabel>
    <relationshipName>Leads</relationshipName>
    <type>Lookup</type>
</CustomField>