force-app/main/default/objects/Lead/fields/Size_of_the_Organisation__c.field-meta.xml
<CustomField>
    <fullName>Size_of_the_Organisation__c</fullName>
    <label>Size of the Organization</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>MidCorp</fullName>
            </value>
            <value>
                <fullName>LargeCorp</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>