force-app/main/default/objects/Lead/fields/What_is_the_total_size_of_this_investmen__c.field-meta.xml
<CustomField>
    <fullName>What_is_the_total_size_of_this_investmen__c</fullName>
    <label>What is the total size of this investmen</label>
    <type>TextArea</type>
</CustomField>