force-app/main/default/objects/Lead/fields/Which_activities_will_you_undertake_duri__c.field-meta.xml
<CustomField>
    <fullName>Which_activities_will_you_undertake_duri__c</fullName>
    <label>Which activities will you undertake duri</label>
    <type>TextArea</type>
</CustomField>