force-app/main/default/objects/Lead/recordTypes/LLC_BI__Loan.recordType-meta.xml
<RecordType>
    <fullName>LLC_BI__Loan</fullName>
    <active>true</active>
    <businessProcess>LLC_BI__Treasury Management Lead</businessProcess>
    <description>Select for a New Loan Opportunity</description>
    <label>Loan</label>
</RecordType>