force-app/main/default/objects/Lead/listViews/Converted_Leads.listView-meta.xml
<ListView>
    <fullName>Converted_Leads</fullName>
    <columns>FULL_NAME</columns>
    <columns>LEAD.EMAIL</columns>
    <columns>LEAD.COMPANY</columns>
    <columns>LEAD.STATE</columns>
    <columns>LEAD.STATUS</columns>
    <columns>LEAD.UNREAD</columns>
    <columns>LEAD.CREATED_DATE</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>LLC_BI__Loan__c</field>
        <operation>notEqual</operation>
        <value>null</value>
    </filters>
    <label>Converted Leads</label>
</ListView>