force-app/main/default/objects/Lead/listViews/LLC_BI__AllOpenLeads.listView-meta.xml
<ListView>
    <fullName>LLC_BI__AllOpenLeads</fullName>
    <filterScope>Everything</filterScope>
    <filters>
        <field>LEAD.STATUS</field>
        <operation>notContain</operation>
        <value>closed</value>
    </filters>
    <label>All Open Leads</label>
</ListView>